[gd_scene load_steps=5 format=3 uid="uid://daf17v3biv5t3"]

[ext_resource type="Theme" uid="uid://cpswmnemqt5dm" path="res://GUI/main_theme.tres" id="1_ibtl7"]
[ext_resource type="Script" path="res://GUI/base_gui.gd" id="1_k2ife"]
[ext_resource type="FontFile" uid="uid://c06jthjawvu8v" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="3_n1hj4"]
[ext_resource type="PackedScene" uid="uid://ceaoo34gyk4pv" path="res://settings.tscn" id="3_ytfr8"]

[node name="BaseGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2ife")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.813258, 0.813258, 0.813258, 1)

[node name="MainAppText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme = ExtResource("1_ibtl7")
bbcode_enabled = true
text = "[center]Screen Time[/center]"
fit_content = true

[node name="MainPage" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="GridContainer" parent="MainPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -165.0
offset_right = 233.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLeftText" type="RichTextLabel" parent="MainPage/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_ibtl7")
bbcode_enabled = true
text = "[center]Time Left[/center]"
fit_content = true

[node name="TimeElapsedTitle" type="RichTextLabel" parent="MainPage/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ibtl7")
bbcode_enabled = true
text = "[center]Total Time[/center]"

[node name="TimeElapsedText" type="RichTextLabel" parent="MainPage/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ibtl7")
bbcode_enabled = true
text = "[center]0[/center]"

[node name="ButtonContainer" type="HBoxContainer" parent="MainPage/MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="ResetButton" type="Button" parent="MainPage/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Reset"

[node name="PauseButton" type="Button" parent="MainPage/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Pause"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="MainPage/MainContainer"]
layout_mode = 2

[node name="SettingsPage" parent="." instance=ExtResource("3_ytfr8")]
visible = false
layout_mode = 1

[node name="SideMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 205.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="MenuButton" type="Button" parent="SideMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ibtl7")
theme_override_colors/font_disabled_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/font_focus_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/font_color = Color(0.355314, 0.355314, 0.355314, 1)
theme_override_colors/font_outline_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_normal_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_focus_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_pressed_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_hover_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_colors/icon_disabled_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_fonts/font = ExtResource("3_n1hj4")
text = ""
flat = true

[node name="MainMenu" type="VBoxContainer" parent="SideMenu"]
visible = false
layout_mode = 2

[node name="SettingsButton" type="Button" parent="SideMenu/MainMenu"]
layout_mode = 2
theme = ExtResource("1_ibtl7")
text = "Settings"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
theme = ExtResource("1_ibtl7")
theme_override_fonts/font = ExtResource("3_n1hj4")
text = ""
